Changes made between Gamera File Releases
=========================================

 - Points can be added


Version 3.3.3, May 15, 2012
----------------------------

 - new plugins min_max_location() and max_empty_rect()

 - Rect can now be a return type of a plugin function

 - ImageType arguments can be optional with "default=NoneDefault"

 - C++ graph API also usable from toolkits

 - fixed a type mismatch in graph API on 64bit bigendian architectures

 - changing feature set in Biollante now works

 - changes in rank() and mean():
    o significantly faster
    o default border_treatment changed to 'reflect',
      because that leads to more expected results than 'padwhite'
    o extended to grey16 images

 - min_max_filter for computing minimum and maximum filter in
   a runtime that is independent from the window size (thanks to
   David Kolanus). This method is now used by shading_subtraction
   to speed up the binarization considerably.

 - convex_hull did not work in some cases

 - option "--version" added to gamera_gui


Version 3.3.2, Sep 19, 2011
----------------------------

 - FSF address in all files corrected

 - sub_cc_analysis did not work on images with offset

 - fixed memory leaks in segmentation_error


Version 3.3.1, Aug 25, 2011
----------------------------

 - plugins for convex hull computation added in category Geometry

 - Int args can now have default NoneDefault;
   required use of TextControl instead of SpinControl for Int in GUI

 - new binarization plugin shading_subtraction for images
   with shaded backgrounds

 - conversion from FLOAT to GREYSCALE/GREY16/RGB now works when
   FLOAT image contains negative values. The range [min,max] is
   now linearly scaled to grey range.

 - runlength_smearing no longer returns empty segments

 - RGBPixel.value now returns V in [0.0,1.0] as documented, not in [0,255]


Version 3.3.0, Mai 02, 2011
----------------------------
