@@ -615,15 +615,18 @@ namespace Gamera {
     FloatVector *right = contour_right(src);
     FloatVector::iterator it;
     size_t y;
+    std::set<Point> pointset;
 
     for(it = left->begin(), y=0; it != left->end() ; it++, y++) {
       if( *it != std::numeric_limits<double>::infinity() ) {
-        contour_points->push_back(Point((int)*it,y));
+        contour_points->push_back(Point((coord_t)*it,y));
+        pointset.insert(Point((coord_t)*it,y));
       }
     }
     for(it = right->begin(), y=0; it != right->end() ; it++, y++) {
       if( *it != std::numeric_limits<double>::infinity() ) {
-        contour_points->push_back(Point((int)src.ncols()-*it,y));
+        if(pointset.count(Point((coord_t)src.ncols()-*it,y))==0)
+          contour_points->push_back(Point((coord_t)src.ncols()-*it,y));
       }
     }
     PointVector *output = convex_hull_from_points(contour_points);
